packages/babel-core/test/fixtures/errors/use-exclude-in-preset/babel.config.js
module.exports = function myConfig(api) {
  api.cache.never();
  return { presets: ["./my-preset.js"] };
};
